--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": "Samdm123*4",
+    "username": "testuser",
+    "password": "1234",
     "database": "escola_ingles",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3307"
   },
   "test": {
     "username": "root",
